@@ -11,6 +11,8 @@
 
 {% block button %}Reisen anzeigen{% endblock %}
 
+{% block link_button %}http://zeitreisen.zeit.de/?wt_mc=zr.intern.display.zeit_online.reisebox.dynamisch.widget.widget&utm_source=zeit_online&utm_medium=display&utm_campaign=reisebox_dynamisch&utm_content=widget{% endblock %}
+
 {% block link_bottom %}
     <div class="pa-link__text">Ein Angebot von</div>
     <a href="http://zeitreisen.zeit.de/?wt_mc=zr.intern.display.zeit_online.reisebox.dynamisch.widget.widget&utm_source=zeit_online&utm_medium=display&utm_campaign=reisebox_dynamisch&utm_content=widget">
